--- a/src/components/Button/Button.styles.sass
+++ b/src/components/Button/Button.styles.sass
@@ -1,5 +1,5 @@
 .button
-    width: 16.2rem
+    width: 100%
     height: 4.6rem
     background-color: var(--green)
     border-radius: 2.8rem
@@ -8,6 +8,9 @@
     text-align: center
     cursor: pointer
     transition: .2s background-color ease
+
+    @media(min-width: 1000px)
+        width: 16.2rem
 
     &:hover
         background-color: var(--lightGreen)
