Update styles - mobile

--- a/src/components/Dots/Dots.styles.sass
+++ b/src/components/Dots/Dots.styles.sass
@@ -1,4 +1,7 @@
 .dots
-    position: absolute
-    right: 0
-    bottom: -5rem
+    display: none
+    @media(min-width: 1000px)
+        display: block
+        position: absolute
+        right: 0
+        bottom: -5rem
