--- a/src/components/Header/Header.styles.sass
+++ b/src/components/Header/Header.styles.sass
@@ -1,6 +1,10 @@
 .header
-    flex: 1
+    z-index: 2
+    @media(min-width: 1000px)
+        flex: 1
     .logo
         width: 135px
         height: auto
-        transform: translateY(-25px)
+
+        @media(min-width: 1000px)
+            transform: translateY(-25px)
