--- a/src/components/Input/Input.styles.sass
+++ b/src/components/Input/Input.styles.sass
@@ -1,5 +1,4 @@
 input
-    flex: 2
     width: 100%
     height: 5.6rem
     padding: 1.4rem 0 1.4rem 3.2rem
@@ -9,6 +8,8 @@ input
     background-color: var(--midBlue)
     font-size: 1.4rem
     font-weight: 700
+    @media(min-width: 1000px)
+        flex: 2
 
     &:focus
         outline: none
