--- a/src/styles/base/_reset.sass
+++ b/src/styles/base/_reset.sass
@@ -10,6 +10,7 @@
     --lightBlue: #5A668A
     --grey: #C2CBE5
     --white: #FFFFFF
+    --overlayColor: #121725
     --mainFont: 'Chivo', sans-serif
 
 html
