Update styles - tablet

--- a/src/styles/layout/_main.sass
+++ b/src/styles/layout/_main.sass
@@ -11,11 +11,18 @@ main
     background-repeat: no-repeat
     background-size: cover
 
-    @media(min-width: 1000px)
+    @media(min-width: 768px)
         justify-content: flex-end
+        height: 76.7rem
+        padding: 0
+        padding-left: 3.9rem
+        background-image: url("../assets/tablet/image-host.jpg")
+        background-size: contain
+        background-position-x: 100%
+
+    @media(min-width: 1440px)
         align-items: normal
         background-image: url("../assets/desktop/image-host.jpg")
-        background-position-x: 100%
         background-size: contain
         padding: 0
         margin: auto
