--- a/src/components/CallToAction/CallToAction.styles.sass
+++ b/src/components/CallToAction/CallToAction.styles.sass
@@ -76,22 +76,11 @@
             flex-direction: row
             gap: 0
             background-color: var(--midBlue)
+            margin: 0
             margin-top: 4rem
 
     form:invalid + .error
         opacity: 1
-        display: inline-block
-        transform: unset
-        color: var(--red)
-        font-size: 1.4rem
-        font-weight: bold
-        text-align: center
-        margin-top: 9px
-
-        @media(min-width: 1440px)
-            translate(4rem, 1rem)
-            text-align: left
-            margin-top: 0
 
     ul
         order: 3
@@ -104,6 +93,9 @@
         @media(min-width: 768px)
             order: 4
 
+        @media(min-width: 1444px)
+            order: 5
+
         img
             width: 5.6rem
             height: auto
@@ -114,10 +106,20 @@
     .error
         order: 5
         opacity: 0
-        transform: translate(4rem, 1rem)
+        display: inline-block
+        color: var(--red)
+        font-size: 1.4rem
+        font-weight: bold
+        text-align: center
+        margin-top: 9px
+
+        @media(min-width: 768px)
+            order: 4
+            text-align: left
+            transform: translate(4rem, 1rem)
 
         @media(min-width: 1440px)
-            transform: translate(4rem, 1rem)
+            order: 4
 
 .highlight
     display: block
