--- a/src/components/Dots/Dots.styles.sass
+++ b/src/components/Dots/Dots.styles.sass
@@ -1,7 +1,14 @@
 .dots
     display: none
-    @media(min-width: 1000px)
+    @media(min-width: 768px)
+        display: block
+        position: absolute
+        left: 3.9rem
+        bottom: -25.6rem
+
+    @media(min-width: 1444px)
         display: block
         position: absolute
         right: 0
+        left: unset
         bottom: -5rem
