--- a/src/styles/layout/_main.sass
+++ b/src/styles/layout/_main.sass
@@ -12,15 +12,18 @@ main
     background-size: cover
 
     @media(min-width: 768px)
-        justify-content: flex-end
+        justify-content: space-between
+        align-items: flex-start
         height: 76.7rem
         padding: 0
+        padding-top: 5rem
         padding-left: 3.9rem
         background-image: url("../assets/tablet/image-host.jpg")
         background-size: contain
         background-position-x: 100%
 
     @media(min-width: 1440px)
+        justify-content: space-between
         align-items: normal
         background-image: url("../assets/desktop/image-host.jpg")
         background-size: contain
